--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -9,4 +9,13 @@
     <%= course.subject_id %>
   </p>
 
+  <p>
+    <strong>Code:</strong>
+    <%= course.code %>
+  </p>
+
+  <p>
+    <strong>Credits:</strong>
+    <%= course.credits %>
+  </p>
 </div>
