--- a/app/views/subjects/_form.html.erb
+++ b/app/views/subjects/_form.html.erb
@@ -14,6 +14,9 @@
   <div>
     <%= form.label :name, style: "display: block" %>
     <%= form.text_field :name %>
+
+    <%= form.label :code, style: "display: block" %>
+    <%= form.text_field :code %>
   </div>
 
   <div>
