--- a/app/views/subjects/_subject.html.erb
+++ b/app/views/subjects/_subject.html.erb
@@ -1,7 +1,15 @@
 <div id="<%= dom_id subject %>">
   <p>
+    <strong>ID:</strong>
+    <%= subject.id %>
+  </p>
+  <p>
     <strong>Name:</strong>
     <%= subject.name %>
+  </p>
+  <p>
+    <strong>Code:</strong>
+    <%= subject.code %>
   </p>
 
 </div>
