Updated courses index

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,16 +1,35 @@
-<p style="color: green"><%= notice %></p>
-
-<% content_for :title, "Courses" %>
+<p style="color: green"><%= notice %></p> <% content_for :title, "Courses" %>
 
 <h1>Courses</h1>
 
 <div id="courses">
-  <% @courses.each do |course| %>
-    <%= render course %>
-    <p>
-      <%= link_to "Show this course", course %>
-    </p>
-  <% end %>
+  <table>
+
+    <tr>
+      <td> Id </td>
+      <td> Name </td>
+      <td> Subject </td>
+      <td> Credits </td>
+    </tr>
+
+    <% @courses.each do |course| %>
+      <tr>
+        <td>
+          <%= course.id %>
+        </td>
+        <td>
+          <%= link_to course.name, course %>
+        </td>
+        <td>
+          <%= link_to course.subject.name, course.subject %>
+        </td>
+        <td>
+          <%= course.credits %>
+        </td>
+      </tr>
+    <% end %>
+
+  </table>
 </div>
 
 <%= link_to "New course", new_course_path %>
