--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -6,7 +6,7 @@
 
   <p>
     <strong>Subject:</strong>
-    <%= course.subject_id %>
+    <%= course.subject.code %>
   </p>
 
   <p>
@@ -18,4 +18,14 @@
     <strong>Credits:</strong>
     <%= course.credits %>
   </p>
+
+
+  <p>
+  <strong>Prerequisites:</strong>
+    <% @course.prerequisites.each do |prereq| %>
+      <br/>
+      <%= link_to prereq.name, prereq %>
+    <% end %>
+  </p>
+
 </div>
