Shows oath uid now

--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,2 +1,8 @@
-<h1>You're logged in! Welcome to the Dashboard!</h1>
+<h1>Welcome, <%= @admin.full_name %>!</h1>
 <%= link_to "Sign Out", destroy_admin_session_path %>
+
+<% if @oauth_uid.present? %>
+  <p>Your unique OAuth ID is: <%= @oauth_uid %></p>
+<% else %>
+  <p>No OAuth ID found.</p>
+<% end %>
