--- a/app/views/course_prerequisites/_course_prerequisite.html.erb
+++ b/app/views/course_prerequisites/_course_prerequisite.html.erb
@@ -1,12 +1,12 @@
 <div id="<%= dom_id course_prerequisite %>">
   <p>
     <strong>Course:</strong>
-    <%= course_prerequisite.course_id %>
+    <%= course_prerequisite.course.name %>
   </p>
 
   <p>
     <strong>Prerequisite:</strong>
-    <%= course_prerequisite.prerequisite_id %>
+    <%= course_prerequisite.prerequisite.name %>
   </p>
 
 </div>
