Updated subjects view

--- a/app/views/subjects/_subject.html.erb
+++ b/app/views/subjects/_subject.html.erb
@@ -11,5 +11,9 @@
     <strong>Code:</strong>
     <%= subject.code %>
   </p>
-
+  <strong>Courses:</strong>
+    <% subject.courses.each do |course| %>
+      <br/>
+      <%= link_to course.name, course %>
+    <% end %>
 </div>
