--- a/app/views/degree_plans/_degree_plan.html.erb
+++ b/app/views/degree_plans/_degree_plan.html.erb
@@ -3,5 +3,14 @@
     <strong>Name:</strong>
     <%= degree_plan.name %>
   </p>
-
+  <p>
+    <strong>Requirements:</strong>
+    <% degree_plan.requirements.each do |requirement| %>
+      <br/>
+      <%= link_to requirement.name, requirement %>
+    <% end %>
+  </p>
+  <p>
+    <%= link_to 'Make new requirement', new_requirement_path %>
+  </p>
 </div>
