updated requirements view

--- a/app/views/requirements/_requirement.html.erb
+++ b/app/views/requirements/_requirement.html.erb
@@ -16,4 +16,6 @@
       <%= link_to course.name, course %>
     <% end %>
   </p>
+  <p>
+  <%= link_to 'Add course to requirement', new_requirement_course_path %>
 </div>
