added links to home and catalog in view layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,6 +49,7 @@
     <% end %>
 
     <%= yield %>
+    <p> <%= link_to "Back to Home", root_path %>
 
     <script>
       document.addEventListener("DOMContentLoaded", function() {
