--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,2 +1,4 @@
 <h1>You're logged in! Welcome to the Dashboard!</h1>
-<%= link_to "Sign Out", destroy_admin_session_path %>
+<p> <%= link_to "Courses", courses_path %> </p>
+<p> <%= link_to "Degree Plans", degree_plans_path %> </p>
+<p> <%= link_to "Sign Out", destroy_admin_session_path %> </p>
