--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,4 +1,8 @@
 <h1>You're logged in! Welcome to the Dashboard!</h1>
 <p> <%= link_to "Courses", courses_path %> </p>
 <p> <%= link_to "Degree Plans", degree_plans_path %> </p>
+<p> <%= link_to "Subjects", subjects_path %> </p>
+<p> <%= link_to "Requirements", requirements_path %> </p>
+<p> <%= link_to "Requirement Courses", requirement_courses_path %> </p>
+<p> <%= link_to "Majors", majors_path %> </p>
 <p> <%= link_to "Sign Out", destroy_admin_session_path %> </p>
