--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -4,4 +4,5 @@
 <p> <%= link_to "Subjects", subjects_path %> </p>
 <p> <%= link_to "Requirements", requirements_path %> </p>
 <p> <%= link_to "Requirement Courses", requirement_courses_path %> </p>
+<%= link_to "Majors", majors_path %>
 <p> <%= link_to "Sign Out", destroy_admin_session_path %> </p>
