--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
         transform: translateX(-50%);
         z-index: 9999;
       }
-      .flash__alert { background-color: #f8d7da; color: #721c24; border: 1px solid #f5c6cb; }
+      .flash__alert { background-color: var(--error-color); color: white; border: 1px solid #f5c6cb; }
       .flash__notice { background-color: #d1ecf1; color: #0c5460; border: 1px solid #bee5eb; }
       .flash__success { background-color: #d4edda; color: #155724; border: 1px solid #c3e6cb; }
 
@@ -49,7 +49,7 @@
     <% end %>
 
     <%= yield %>
-    <p> <%= link_to "Back to Home", root_path %>
+    <p class="backHome"> <%= link_to "Back to Home", root_path %>
 
     <script>
       document.addEventListener("DOMContentLoaded", function() {
