general styling applied

--- a/app/views/course_prerequisites/index.html.erb
+++ b/app/views/course_prerequisites/index.html.erb
@@ -4,7 +4,7 @@
 
 <h1>Course prerequisites</h1>
 
-<div id="course_prerequisites">
+<div id="course_prerequisites" className="links">
   <table>
     <tr>
       <th>
