--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,7 +20,7 @@
    --error-color: #D32F2F;
    --inactive-icon-color: #757575;
 }
-body {
+body, div {
    font-family: 'Roboto', sans-serif;
    background-color: var(--background-color);
 }
@@ -29,15 +29,32 @@ p, body {
    font-size: 0.875rem;
 }
 
+a {
+   color: black;
+   border-radius: 0.5rem;
+   font-size: 0.875rem;
+   display: block;
+}
+
 .caption {
    font-size: 0.75rem;
 }
 
-.backHome {
+.backHome { /* TO BE FIXED */
+   color: var(--primary-color);
+   display: inline-block;
    position: absolute;
-   top: 0;
-   right: 0;
+   padding: 0.5rem 0.5rem;
+   font-size: 0.75rem; /*  ???   */
+   border-radius: 0.5rem;
+   top: 1rem;
+   right: 1rem;
    margin: 1rem;
+   z-index: 1000;
+}
+
+.signout {
+   color: var(--primary-color);
 }
 
 button {
@@ -61,15 +78,41 @@ button:hover {
  h1, h2, h3, h4, h5, h6 {
    font-size: 1.5rem;
 }
-
-@media (max-width: 768px) {
-   .container {
-       grid-template-columns: repeat(6, 1fr);
-   }
+.heading {
+   grid-column: 1 / -1;
+   font-size: 1.5rem;
+   text-align: center;
+   color: var(--primary-color)
 }
 
-@media (max-width: 480px) {
-   .container {
-       grid-template-columns: repeat(2, 1fr);
-   }
+.links {
+   display: flex;
+   flex-direction: column;
+   gap: 0.5rem;
+}
+
+.links a {
+   color: white;
+   background-color: #1976D2; /* Primary color */
+   padding: 0.1rem 1.5rem;
+   border-radius: 0.5rem;
+   transition: background-color 0.3s ease;
+   font-size: 1rem;
+   display: block;
+}
+
+.links a:hover {
+   background-color: #165a9e; /* Darken primary color by 10% */
+}
+
+
+.container {
+   display: grid;
+   grid-template-columns: repeat(12, 1fr);
+   gap: 0.5rem;
+   margin: 0 auto;
+   padding: 2rem;
+   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.24);
+   text-align: center;
+   align-items: center;
 }
