--- a/app/views/course_prerequisites/show.html.erb
+++ b/app/views/course_prerequisites/show.html.erb
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="assets/stylesheets/application.css">
 <p style="color: green"><%= notice %></p>
 
 <%= render @course_prerequisite %>
