--- a/app/views/course_prerequisites/edit.html.erb
+++ b/app/views/course_prerequisites/edit.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "Editing course prerequisite" %>
 
-<h1>Editing course prerequisite</h1>
+<h1 class="heading">Editing course prerequisite</h1>
 
 <%= render "form", course_prerequisite: @course_prerequisite %>
 
