--- a/app/views/course_prerequisites/index.html.erb
+++ b/app/views/course_prerequisites/index.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :title, "Course prerequisites" %>
 
-<h1>Course prerequisites</h1>
+<h1 class="heading">Course prerequisites</h1>
 
 <div id="course_prerequisites" className="links">
   <table>
