--- a/app/views/degree_plans/edit.html.erb
+++ b/app/views/degree_plans/edit.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "Editing degree plan" %>
 
-<h1>Editing degree plan</h1>
+<h1 class="heading">Editing degree plan</h1>
 
 <%= render "form", degree_plan: @degree_plan %>
 
