--- a/app/views/course_prerequisites/new.html.erb
+++ b/app/views/course_prerequisites/new.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "New course prerequisite" %>
 
-<h1>New course prerequisite</h1>
+<h1 class="heading">New course prerequisite</h1>
 
 <%= render "form", course_prerequisite: @course_prerequisite %>
 
