--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "Editing course" %>
 
-<h1>Editing course</h1>
+<h1 class="heading">Editing course</h1>
 
 <%= render "form", course: @course %>
 
