--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p> <% content_for :title, "Courses" %>
 
-<h1>Courses</h1>
+<h1 class="heading">Courses</h1>
 
 <div id="courses">
   <table>
