--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "New course" %>
 
-<h1>New course</h1>
+<h1 class="heading">New course</h1>
 
 <%= render "form", course: @course %>
 
