--- a/app/views/degree_plans/index.html.erb
+++ b/app/views/degree_plans/index.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :title, "Degree plans" %>
 
-<h1>Degree plans</h1>
+<h1 class="heading">Degree plans</h1>
 
 <div id="degree_plans">
   <% @degree_plans.each do |degree_plan| %>
