--- a/app/views/degree_plans/new.html.erb
+++ b/app/views/degree_plans/new.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "New degree plan" %>
 
-<h1>New degree plan</h1>
+<h1 class="heading">New degree plan</h1>
 
 <%= render "form", degree_plan: @degree_plan %>
 
