--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -82,7 +82,8 @@ button:hover {
    grid-column: 1 / -1;
    font-size: 1.5rem;
    text-align: center;
-   color: var(--primary-color)
+   color: var(--primary-color);
+   padding: 0.5rem;
 }
 
 .links {
