link rel href for css file added to all html.erb pages

--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="assets/stylesheets/application.css">
+
 <%= form_with(model: course) do |form| %>
   <% if course.errors.any? %>
     <div style="color: red">
