--- a/app/views/degree_plans/edit.html.erb
+++ b/app/views/degree_plans/edit.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="assets/stylesheets/application.css">
+
 <% content_for :title, "Editing degree plan" %>
 
 <h1 class="heading">Editing degree plan</h1>
