--- a/app/views/course_prerequisites/edit.html.erb
+++ b/app/views/course_prerequisites/edit.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="assets/stylesheets/application.css">
+
 <% content_for :title, "Editing course prerequisite" %>
 
 <h1 class="heading">Editing course prerequisite</h1>
