--- a/app/views/course_prerequisites/index.html.erb
+++ b/app/views/course_prerequisites/index.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="assets/stylesheets/application.css">
+
 <p style="color: green"><%= notice %></p>
 
 <% content_for :title, "Course prerequisites" %>
