--- a/app/views/course_prerequisites/new.html.erb
+++ b/app/views/course_prerequisites/new.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="assets/stylesheets/application.css">
+
 <% content_for :title, "New course prerequisite" %>
 
 <h1 class="heading">New course prerequisite</h1>
