--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="assets/stylesheets/application.css">
+
 <% content_for :title, "Editing course" %>
 
 <h1 class="heading">Editing course</h1>
