--- a/app/views/degree_plans/_degree_plan.html.erb
+++ b/app/views/degree_plans/_degree_plan.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="assets/stylesheets/application.css">
+
 <div id="<%= dom_id degree_plan %>">
   <p>
     <strong>Name:</strong>
