--- a/app/views/degree_plans/_form.html.erb
+++ b/app/views/degree_plans/_form.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="assets/stylesheets/application.css">
+
 <%= form_with(model: degree_plan) do |form| %>
   <% if degree_plan.errors.any? %>
     <div style="color: red">
