--- a/app/views/degree_plans/new.html.erb
+++ b/app/views/degree_plans/new.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="assets/stylesheets/application.css">
+
 <% content_for :title, "New degree plan" %>
 
 <h1 class="heading">New degree plan</h1>
