--- a/app/views/requirement_courses/edit.html.erb
+++ b/app/views/requirement_courses/edit.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="assets/stylesheets/application.css">
+
 <% content_for :title, "Editing requirement course" %>
 
 <h1>Editing requirement course</h1>
