--- a/app/views/users/create_profile.html.erb
+++ b/app/views/users/create_profile.html.erb
@@ -1,4 +1,6 @@
-<h1>Create Your Profile</h1>
+<link rel="stylesheet" href="assets/stylesheets/application.css">
+
+<h1 class="heading">Create Your Profile</h1>
 
 <%= form_for @user, url: update_profile_user_path(@user), method: :patch do |f| %>
   <div class="field">
