--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,8 +1,7 @@
 <link rel="stylesheet" href="assets/stylesheets/application.css">
 <div class="container">
-    <h1 class="heading">You're logged in! Welcome to the Dashboard!</h1>
+    <h1 class="heading">Welcome to the Dashboard!</h1>
     <div class="links">
-        <h1>Welcome to the Dashboard!</h1>
         <p> <%= link_to "Courses", courses_path %> </p>
         <p> <%= link_to "Degree Plans", degree_plans_path %> </p>
         <p> <%= link_to "Subjects", subjects_path %> </p>
