--- a/app/views/requirement_courses/_form.html.erb
+++ b/app/views/requirement_courses/_form.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="assets/stylesheets/application.css">
+
 <%= form_with(model: requirement_course) do |form| %>
   <% if requirement_course.errors.any? %>
     <div style="color: red">
