--- a/app/views/requirement_courses/_requirement_course.html.erb
+++ b/app/views/requirement_courses/_requirement_course.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="assets/stylesheets/application.css">
+
 <div id="<%= dom_id requirement_course %>">
   <p>
     <strong>Requirement:</strong>
