--- a/app/views/requirement_courses/new.html.erb
+++ b/app/views/requirement_courses/new.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="assets/stylesheets/application.css">
+
 <% content_for :title, "New requirement course" %>
 
 <h1>New requirement course</h1>
