--- a/app/views/requirements/edit.html.erb
+++ b/app/views/requirements/edit.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="assets/stylesheets/application.css">
+
 <% content_for :title, "Editing requirement" %>
 
 <h1>Editing requirement</h1>
