--- a/app/views/requirements/new.html.erb
+++ b/app/views/requirements/new.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="assets/stylesheets/application.css">
+
 <% content_for :title, "New requirement" %>
 
 <h1>New requirement</h1>
