--- a/app/views/user_interests/_form.html.erb
+++ b/app/views/user_interests/_form.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="assets/stylesheets/application.css">
+
 <%= form_with(model: user_interest) do |form| %>
   <% if user_interest.errors.any? %>
     <div style="color: red">
