--- a/app/views/user_interests/_user_interest.html.erb
+++ b/app/views/user_interests/_user_interest.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="assets/stylesheets/application.css">
+
 <div id="<%= dom_id user_interest %>">
   <p>
     <strong>Interest:</strong>
