--- a/app/views/user_interests/edit.html.erb
+++ b/app/views/user_interests/edit.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="assets/stylesheets/application.css">
+
 <% content_for :title, "Editing user interest" %>
 
 <h1>Editing user interest</h1>
