--- a/app/views/user_interests/new.html.erb
+++ b/app/views/user_interests/new.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="assets/stylesheets/application.css">
+
 <% content_for :title, "New user interest" %>
 
 <h1>New user interest</h1>
