--- a/app/views/user_plan_courses/_form.html.erb
+++ b/app/views/user_plan_courses/_form.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="assets/stylesheets/application.css">
+
 <%= form_with(model: user_plan_course) do |form| %>
   <% if user_plan_course.errors.any? %>
     <div style="color: red">
