--- a/app/views/user_plan_courses/edit.html.erb
+++ b/app/views/user_plan_courses/edit.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="assets/stylesheets/application.css">
+
 <% content_for :title, "Editing user plan course" %>
 
 <h1>Editing user plan course</h1>
