--- a/app/views/user_plan_courses/show.html.erb
+++ b/app/views/user_plan_courses/show.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="assets/stylesheets/application.css">
+
 <p style="color: green"><%= notice %></p>
 
 <%= render @user_plan_course %>
