heading class added to h1 html headers

--- a/app/views/requirement_courses/edit.html.erb
+++ b/app/views/requirement_courses/edit.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :title, "Editing requirement course" %>
 
-<h1>Editing requirement course</h1>
+<h1 class="heading">Editing requirement course</h1>
 
 <%= render "form", requirement_course: @requirement_course %>
 
