--- a/app/views/requirement_courses/index.html.erb
+++ b/app/views/requirement_courses/index.html.erb
@@ -4,7 +4,7 @@
 
 <% content_for :title, "Requirement courses" %>
 
-<h1>Requirement courses</h1>
+<h1 class="heading">Requirement courses</h1>
 
 <div id="requirement_courses">
   <% @requirement_courses.each do |requirement_course| %>
