--- a/app/views/requirements/edit.html.erb
+++ b/app/views/requirements/edit.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :title, "Editing requirement" %>
 
-<h1>Editing requirement</h1>
+<h1 class="heading">Editing requirement</h1>
 
 <%= render "form", requirement: @requirement %>
 
