--- a/app/views/subjects/edit.html.erb
+++ b/app/views/subjects/edit.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "Editing subject" %>
 
-<h1>Editing subject</h1>
+<h1 class="heading">Editing subject</h1>
 
 <%= render "form", subject: @subject %>
 
