--- a/app/views/subjects/new.html.erb
+++ b/app/views/subjects/new.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "New subject" %>
 
-<h1>New subject</h1>
+<h1 class="heading">New subject</h1>
 
 <%= render "form", subject: @subject %>
 
