--- a/app/views/user_interests/edit.html.erb
+++ b/app/views/user_interests/edit.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :title, "Editing user interest" %>
 
-<h1>Editing user interest</h1>
+<h1 class="heading">Editing user interest</h1>
 
 <%= render "form", user_interest: @user_interest %>
 
