--- a/app/views/user_interests/index.html.erb
+++ b/app/views/user_interests/index.html.erb
@@ -4,7 +4,7 @@
 
 <% content_for :title, "User interests" %>
 
-<h1>User interests</h1>
+<h1 class="heading">User interests</h1>
 
 <div id="user_interests">
   <% @user_interests.each do |user_interest| %>
