--- a/app/views/user_interests/new.html.erb
+++ b/app/views/user_interests/new.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :title, "New user interest" %>
 
-<h1>New user interest</h1>
+<h1 class="heading">New user interest</h1>
 
 <%= render "form", user_interest: @user_interest %>
 
