--- a/app/views/user_plan_courses/new.html.erb
+++ b/app/views/user_plan_courses/new.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :title, "New user plan course" %>
 
-<h1>New user plan course</h1>
+<h1 class="heading">New user plan course</h1>
 
 <%= render "form", user_plan_course: @user_plan_course %>
 
