--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="assets/stylesheets/application.css">
 
-<h1>Edit Profile</h1>
+<h1 class="heading">Edit Profile</h1>
 
 <%= form_for @user do |f| %>
   <div class="field">
