--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :title, "New user" %>
 
-<h1>New user</h1>
+<h1 class="heading">New user</h1>
 
 <%= render "form", user: @user %>
 
