--- a/app/views/requirement_courses/new.html.erb
+++ b/app/views/requirement_courses/new.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :title, "New requirement course" %>
 
-<h1>New requirement course</h1>
+<h1 class="heading">New requirement course</h1>
 
 <%= render "form", requirement_course: @requirement_course %>
 
