--- a/app/views/requirements/index.html.erb
+++ b/app/views/requirements/index.html.erb
@@ -4,7 +4,7 @@
 
 <% content_for :title, "Requirements" %>
 
-<h1>Requirements</h1>
+<h1 class="heading">Requirements</h1>
 
 <div id="requirements">
   <% @requirements.each do |requirement| %>
