--- a/app/views/requirements/new.html.erb
+++ b/app/views/requirements/new.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :title, "New requirement" %>
 
-<h1>New requirement</h1>
+<h1 class="heading">New requirement</h1>
 
 <%= render "form", requirement: @requirement %>
 
