--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :title, "Subjects" %>
 
-<h1>Subjects</h1>
+<h1 class="heading">Subjects</h1>
 
 <div id="subjects">
   <% @subjects.each do |subject| %>
