--- a/app/views/user_plan_courses/edit.html.erb
+++ b/app/views/user_plan_courses/edit.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :title, "Editing user plan course" %>
 
-<h1>Editing user plan course</h1>
+<h1 class="heading">Editing user plan course</h1>
 
 <%= render "form", user_plan_course: @user_plan_course %>
 
