--- a/app/views/user_plan_courses/index.html.erb
+++ b/app/views/user_plan_courses/index.html.erb
@@ -4,7 +4,7 @@
 
 <% content_for :title, "User plan courses" %>
 
-<h1>User plan courses</h1>
+<h1 class="heading">User plan courses</h1>
 
 <div id="user_plan_courses">
   <% @user_plan_courses.each do |user_plan_course| %>
