--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
 
 <% content_for :title, "Users" %>
 
-<h1>Users</h1>
+<h1 class="heading">Users</h1>
 
 <div id="users">
   <% @users.each do |user| %>
