--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,10 +23,15 @@
 body, div {
    font-family: 'Roboto', sans-serif;
    background-color: var(--background-color);
+   justify-content: center;
+   align-items: center;
 }
 
 p, body {
    font-size: 0.875rem;
+   font-family: 'Roboto', sans-serif;
+   justify-content: center;
+   align-items: center;
 }
 
 /* a {
@@ -34,11 +39,9 @@ p, body {
    border-radius: 0.5rem;
    font-size: 0.875rem;
    display: block;
+   text-decoration: none;
+   background-color: var(--primary-color);
 } */
-
-.caption {
-   font-size: 0.75rem;
-}
 
 .signout {
    color: var(--primary-color);
@@ -66,6 +69,7 @@ button:hover {
    font-size: 1.5rem;
 }
 .heading {
+   margin-top: 1.5rem;
    grid-column: 1 / -1;
    font-size: 1.5rem;
    text-align: center;
@@ -77,6 +81,18 @@ button:hover {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
+   justify-content: center;
+   align-items: center;
+   text-align: center;
+}
+
+.links p {
+   display: grid;
+   flex-direction: column;
+   gap: 0.5rem;
+   justify-content: center;
+   align-items: center;
+   text-align: center;
 }
 
 .links a {
@@ -88,6 +104,8 @@ button:hover {
    transition: background-color 0.3s ease;
    font-size: 1rem;
    display: block;
+   justify-content: center;
+   align-items: center;
 }
 
 .links a:hover {
@@ -95,29 +113,34 @@ button:hover {
 }
 
 
-.backHome { /* TO BE FIXED */
+.backHome a { /* TO BE FIXED */
    color: var(--primary-color);
+   font-family: 'Roboto', sans-serif;
    display: inline-block;
    position: absolute;
    padding: 0.5rem 0.5rem;
    font-size: 0.75rem; /*  ???   */
    border-radius: 0.5rem;
-   top: 1rem;
-   right: 1rem;
-   margin: 1rem;
+   top: 0.5rem;
+   right: 0.5rem;
+   margin-bottom: 1rem;
    z-index: 1000;
+   text-decoration: none;
 }
 
 
 .container {
-   display: grid;
-   grid-template-columns: repeat(12, 1fr);
-   gap: 0.5rem;
+   /* display: grid;
+   grid-template-columns: repeat(12, 1fr); */
+   display: flex;
+   flex-direction: column;
+   /* gap: 0.5rem; */
    margin: 0 auto;
-   padding: 2rem;
-   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.24);
+   /* padding: 2rem; */
+   /* box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.24); */
    text-align: center;
    align-items: center;
+   justify-content: center;
 }
 
 /* table styling */
