--- a/app/views/course_prerequisites/show.html.erb
+++ b/app/views/course_prerequisites/show.html.erb
@@ -7,5 +7,5 @@
   <%= link_to "Edit this course prerequisite", edit_course_prerequisite_path(@course_prerequisite) %> |
   <%= link_to "Back to course prerequisites", course_prerequisites_path %>
 
-  <%= button_to "Destroy this course prerequisite", @course_prerequisite, method: :delete %>
+  <%= button_to "Destroy this course prerequisite", @course_prerequisite, method: :delete, class: "delete" %>
 </div>
