--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -8,5 +8,5 @@
   <%= link_to "Edit this course", edit_course_path(@course) %> |
   <%= link_to "Back to courses", courses_path %>
 
-  <%= button_to "Destroy this course", @course, method: :delete %>
+  <%= button_to "Destroy this course", @course, method: :delete, class: "delete" %>
 </div>
