--- a/app/views/degree_plans/show.html.erb
+++ b/app/views/degree_plans/show.html.erb
@@ -8,5 +8,5 @@
   <%= link_to "Edit this degree plan", edit_degree_plan_path(@degree_plan) %> |
   <%= link_to "Back to degree plans", degree_plans_path %>
 
-  <%= button_to "Destroy this degree plan", @degree_plan, method: :delete %>
+  <%= button_to "Destroy this degree plan", @degree_plan, method: :delete, class: "delete" %>
 </div>
