--- a/app/views/requirement_courses/show.html.erb
+++ b/app/views/requirement_courses/show.html.erb
@@ -8,5 +8,5 @@
   <%= link_to "Edit this requirement course", edit_requirement_course_path(@requirement_course) %> |
   <%= link_to "Back to requirement courses", requirement_courses_path %>
 
-  <%= button_to "Destroy this requirement course", @requirement_course, method: :delete %>
+  <%= button_to "Destroy this requirement course", @requirement_course, method: :delete, class: "delete" %>
 </div>
