--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -6,5 +6,5 @@
   <%= link_to "Edit this subject", edit_subject_path(@subject) %> |
   <%= link_to "Back to subjects", subjects_path %>
 
-  <%= button_to "Destroy this subject", @subject, method: :delete %>
+  <%= button_to "Destroy this subject", @subject, method: :delete, class: "delete" %>
 </div>
