--- a/app/views/requirements/show.html.erb
+++ b/app/views/requirements/show.html.erb
@@ -8,5 +8,5 @@
   <%= link_to "Edit this requirement", edit_requirement_path(@requirement) %> |
   <%= link_to "Back to requirements", requirements_path %>
 
-  <%= button_to "Destroy this requirement", @requirement, method: :delete %>
+  <%= button_to "Destroy this requirement", @requirement, method: :delete, class: "delete" %>
 </div>
