--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,5 +11,5 @@
 
   <%= link_to "User interests", user_interests_path %>
 
-  <%= button_to "Destroy this user", @user, method: :delete, data: {confirm: "Are you sure?"} %>
+  <%= button_to "Destroy this user", @user, method: :delete, data: {confirm: "Are you sure?"}, class: "delete" %>
 </div>
