--- a/app/views/user_plan_courses/_user_plan_course.html.erb
+++ b/app/views/user_plan_courses/_user_plan_course.html.erb
@@ -1,2 +1,6 @@
 <div id="<%= dom_id user_plan_course %>">
+  <p>
+    <strong>Course:</strong>
+    <%= @user_plan_course.course.name %>
+  </p>
 </div>
