--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,7 +1,12 @@
-<h1>You're logged in! Welcome to the Dashboard!</h1>
+<h1>Welcome to Cleo, The Smart Course Scheduler!</h1>
 <p> <%= link_to "Courses", courses_path %> </p>
 <p> <%= link_to "Degree Plans", degree_plans_path %> </p>
 <p> <%= link_to "Subjects", subjects_path %> </p>
 <p> <%= link_to "Requirements", requirements_path %> </p>
 <p> <%= link_to "Requirement Courses", requirement_courses_path %> </p>
-<p> <%= link_to "Sign Out", destroy_admin_session_path %> </p>
+    <% if user_signed_in? %>
+        <p> <%= link_to 'User Profile', user_profile_path %> </p>
+        <p> <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %> </p>
+    <% else %>
+        <p> <%= link_to "Sign In", new_user_session_path %> </p>
+    <% end %>
