--- a/app/views/users/create_profile.html.erb
+++ b/app/views/users/create_profile.html.erb
@@ -13,6 +13,10 @@
     <%= f.label :major, "Major" %><br>
     <%= f.select :major, @majors, { include_blank: 'Select a Major' }, { required: true } %>
   </div>
+  <div class="field">
+    <%= f.label :preference_id, "Preferred Subject" %><br>
+    <%= f.select :preference_id, @subjects, { include_blank: 'Select a Subject' }, { required: true } %>
+  </div>
   <div class="actions">
     <%= f.submit "Create Profile" %>
   </div>
