--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,8 +2,8 @@
 
 <%= form_for @user do |f| %>
   <div class="field">
-    <%= f.label :major, "Major" %><br>
-    <%= f.select :major, @majors, { include_blank: 'Select a Major' }, { required: true } %>
+    <%= f.label :major_id, "Major" %><br>
+    <%= f.select :major_id, @majors, { include_blank: 'Select a Major' }, { required: true } %>
   </div>
   <div class="field">
     <%= f.label :preference_id, "Preferred Subject" %><br>
