--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 
 <p><strong>Name:</strong> <%= @user.full_name %></p>
 <p><strong>Email:</strong> <%= @user.email %></p>
-<p><strong>Major:</strong> <%= @user.major %></p>
+<p><strong>Major:</strong> <%= @major %></p>
 <p><strong>Preferred Subject:</strong> <%= @preference || "Not selected" %></p>
 
 
