--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -6,7 +6,8 @@
 
 <div>
   <%= link_to "Edit this course", edit_course_path(@course) %> |
-  <%= link_to "Back to courses", courses_path %>
+  <%= link_to "Back to Courses for #{@course.subject.code}", courses_by_subject_path(@course.subject.code) %> |
+  <%= link_to "Back to Subjects", courses_path %>
 
   <%= button_to "Destroy this course", @course, method: :delete, class: "delete" %>
 </div>
