--- a/app/views/user_plan_courses/_user_plan_course.html.erb
+++ b/app/views/user_plan_courses/_user_plan_course.html.erb
@@ -5,4 +5,8 @@
     <strong>Course:</strong>
     <%= @user_plan_course.course.name %>
   </p>
+  <p>
+    <strong>Have already taken:</strong>
+    <%= @user_plan_course.has_taken %>
+  </p>
 </div>
